2007-10-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Implemented BitTorrent/http/ftp integrated download.
	I've rewritten lots of files and now some headers have forward
	class declarations to reduce compile time.
	The implementation is extremely alpha stage, I recommend to use this
	for testing purpose only.

2007-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the compilation error on 64bit platform.
	* test/HttpHeaderProcessorTest.cc

2007-09-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Merged Ross's patch that fixes compilation problem in MinGW
	* test/DefaultBtProgressInfoFileTest.cc

2007-09-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated fr.po by sebone
	* po/fr.po

	Updated man page.
	* doc/aria2c.1.txt
	
	* Release 0.11.3
	
2007-09-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/MetalinkRequestInfo.cc (execute): Fixed BitTorrent download
	failure in Metalink.

2007-09-03  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Automatically save *.aria2 control file of http/ftp download in every
	60 seconds.
	* src/AutoSaveCommand.{h, cc}: New class.
	* src/TimeBasedCommand.{h, cc}: New class.
	* src/DownloadEngineFactory.cc (newConsoleEngine)

	Disable parameterized URI support by default. Added -P option to
	enable the feature.
	* src/prefs.h: Added PREF_PARAMETERIZED_URI
	* src/OptionHandlerFactory.cc
	* src/main.cc: Also updated usages for -Z and --auto-file-renaming

	Updated Japanese translation.
	* po/ja.po

	Updated man page.
	* doc/aria2c.1.txt
	
	* Release 0.11.3-rc

2007-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Now *.aria2 contorol file is first saved to *.aria2__temp and if
	it is successful, then renamed to *.aria2.
	This prevents *.aria2 file from being truncated	or corrupted when
	file system becomes out of space.
	* src/DefaultBtProgressInfoFile.cc (save)
	* src/SegmentMan.cc (save)
	* test/DefaultBtProgressInfoFileTest.cc (testSave): Implemented.
