@@ -1,5 +1,12 @@
 2007-10-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Do not send referer when redirected.
+	* src/Request.cc (redirectUrl)
+	* test/RequestTest.cc
+	* test/HttpRequestTest.cc
+
+2007-10-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Implemented BitTorrent/http/ftp integrated download.
 	I've rewritten lots of files and now some headers have forward
 	class declarations to reduce compile time.
